force-app/main/default/objects/Student__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <formula>Sum_of_Ratings__c  /  Total_Ratings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>