force-app/main/default/objects/Student__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>