force-app/main/default/objects/Student__c/fields/Currently_working_in__c.field-meta.xml
<CustomField>
    <fullName>Currently_working_in__c</fullName>
    <label>Currently working in</label>
    <length>80</length>
    <type>Text</type>
</CustomField>