force-app/main/default/objects/Student__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>App Development</fullName>
            </value>
            <value>
                <fullName>Core Languages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>