force-app/main/default/objects/Student__c/fields/Domain_Technology_working__c.field-meta.xml
<CustomField>
    <fullName>Domain_Technology_working__c</fullName>
    <label>Domain/Technology working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>App Development</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Gen AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>