force-app/main/default/objects/Student__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Dancing</fullName>
            </value>
            <value>
                <fullName>Playing</fullName>
            </value>
            <value>
                <fullName>Reading Books</fullName>
            </value>
            <value>
                <fullName>Singing</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
            <value>
                <fullName>Watching Movies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>