force-app/main/default/objects/Student__c/fields/Interested_Course__c.field-meta.xml
<CustomField>
    <fullName>Interested_Course__c</fullName>
    <label>Interested Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Advanced Java</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>DotNet</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>MySQL</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>App Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>