force-app/main/default/objects/Student__c/fields/Reffered_By__c.field-meta.xml
<CustomField>
    <fullName>Reffered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reffered By</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>