force-app/main/default/objects/Student__c/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <label>Scholarship</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>