force-app/main/default/objects/Student__c/fields/Sum_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Ratings__c</fullName>
    <label>Sum of Ratings</label>
    <summarizedField>Rating__c.Rating_out_of_10__c</summarizedField>
    <summaryForeignKey>Rating__c.Rating_given_to_which_Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>