force-app/main/default/objects/Student__c/fields/Total_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Total_Ratings__c</fullName>
    <label>Total Ratings</label>
    <summaryForeignKey>Rating__c.Rating_given_to_which_Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>