force-app/main/default/objects/Student__c/fields/Year_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Graduation__c</fullName>
    <label>Year of Graduation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>