force-app/main/default/objects/Student__c/validationRules/RegFeesCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>RegFeesCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Initial_Fees__c  &lt; 5000</errorConditionFormula>
    <errorDisplayField>Initial_Fees__c</errorDisplayField>
    <errorMessage>Registration fee is less than 5000</errorMessage>
</ValidationRule>